--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
   },
